--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <img height="50px" src="./Assets/Images/Unterschrift.png" alt="Unterschrift Julius">
             <p>Julius Summer</p>
         <hr>
+    <footer>
         <p>(c) Julius Summer 2024</p>
+    </footer>
 
         
 
